configuration_examples/frontend-backend-app/network-policy.yaml
# check if the cni plugin supports network policies
# Start minikube --> minikube start --cni=calico
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-allow-only-frontend
spec:
  podSelector:
    matchLabels:
      app: hello
      tier: backend
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: hello
              tier: frontend
      ports:
        - protocol: TCP
          port: 80
